# alchemist-shell

./: .gitignore  README.md  pyproject.toml
src/alchemist_shell/: __init__.py  cli.py  discovery.py  inspect.py  session.py  utils.py
