[project]
name = "alchemist-shell"
version = "0.1.3"
description = "The missing interactive shell for SQLAlchemy projects."
authors = [
    {name = "Elkana Maina",email = "elisoft.engineer@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "typer>=0.9.0",
    "ipython>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "nest-asyncio>=1.5.0"
]

[tool.poetry]
packages = [{include = "alchemist_shell", from = "src"}]

[project.scripts]
alchemist = "alchemist_shell.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.21,<0.16.0)"
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]